--- a/sessies/agenda/20240704 agenda.md
+++ b/sessies/agenda/20240704 agenda.md
@@ -1,5 +1,5 @@
 1) Mededelingen
-2) Verslag en actiepunten vorige keer
+2) [Verslag](https://github.com/Geonovum/NL-SBB/blob/main/sessies/verslagen/20240418%20verslag.md) en actiepunten vorige keer
 3) Vaststellen best practice [begrippenbeheer en metadata](https://docs.geostandaarden.nl/nl-sbb/nl-sbb/#begrippenbeheer-en-metadata)
 4) Gebruikerservaringen tot nu toe
 5) Openstaande issues
