Update and rename 20241009 verslag to 20241009 verslag.md
Opmaak verbeterd en in lijn gebracht met andere verslagen

--- a/sessies/Collecties en Waardelijsten /verslagen/20241009 verslag.md
+++ b/sessies/Collecties en Waardelijsten /verslagen/20241009 verslag.md
@@ -1,5 +1,5 @@
 
-Aanwezig: Nicole Groot-Nibbeling,Fred Termaat, Arjen Santema en Kees Trautwein
+*Aanwezig*: Nicole Groot-Nibbeling(Belastingdienst),Fred Termaat(Belastingdienst), Arjen Santema(Kadaster) en Kees Trautwein(Logius)
 
 We hebben het veel over collecties en waardelijsten gehad in de context van informatiemodellen en dan met name MIM. 
 
