--- a/sessies/metadata/verslagen/20241009 verslag.md
+++ b/sessies/metadata/verslagen/20241009 verslag.md
@@ -3,10 +3,7 @@
 We hebben op 9 oktober bij de eerste bijeenkomst besproken:
 -	We maken een DCAT profiel voor de drie beheersets die we onderscheiden, t.w. Beheerset, Provenance set en Publicatieset, (https://docs.geostandaarden.nl/nl-sbb/nl-sbb/#varianten-voor-versiebeheer-van-begripsbeschrijvingen). 
 -	Hierin nemen we metadata-properties op die relevant zijn voor deze drie verschillende sets. 
--	(Door Kees toegevoegd, niet besproken) Herinnering waarvoor DCAT properties worden gebruikt:
-1.	Met metadata kunnen gebruikers zonder een set inhoudelijk te bekijken de juiste selecties maken uit het aanbod van sets om hun werk beter te kunnen uitvoeren 
-2.	Omdat DCAT profielen uitgewisseld kunnen worden met portalen als data.overheid.nl en https://data.europa.eu
--	We baseren ons op het profiel DCAT-AP-NLv3.  https://docs.geostandaarden.nl/dcat/dcat-ap-nl30/.  Als dat niet voldoet kan ADMS van SEMIC, https://semiceu.github.io/ADMS/releases/2.00/,  dienen als input. Inspiratie kunnen we wellicht ook putten uit het werk van Steven Gort(ICTU) en Toine Schijvenaars (NORA expertgroep begrippen)  voor regels.overheid.nl
+-	We baseren ons op het profiel DCAT-AP-NLv3: https://docs.geostandaarden.nl/dcat/dcat-ap-nl30/.  Als dat niet voldoet kan ADMS van SEMIC, https://semiceu.github.io/ADMS/releases/2.00/,  dienen als input. Inspiratie kunnen we wellicht ook putten uit het werk van Steven Gort(ICTU) en Toine Schijvenaars (NORA expertgroep begrippen) voor regels.overheid.nl
 -	Ons profiel baseert zich met name op de properties van datasets uit DCAT-AP-NLv3. Mogelijk worden er zaken meegenomen uit Distributies van DCAT. Op dit moment gaan we niet uit van API’s om met bovenstaande sets te werken
 -	We hebben de Excel uit de eerste Metadata werkgroep aangepast en de eerste paar properties doorgenomen voor de drie sets. We gebruiken de afkortingen V(erplicht) C(ondtioneel) O(ptioneel) A(angeraden) en N(iet opnemen) om per set aan te geven wat de status van dit property zou moeten zijn. Properties die voor geen enkele set van toepassing zijn, laten we vervallen
 
