--- a/sessies/Collecties en Waardelijsten /verslagen/20241009 verslag.md
+++ b/sessies/Collecties en Waardelijsten /verslagen/20241009 verslag.md
@@ -10,4 +10,4 @@ Een conclusie is dat *waardelijst* een verkeerde term is. Het is beter is onders
 	- Lijsten met concepten = begrippen
 - Lijsten met daarin een rijtje gegevens zonder samenhang. Deze komen met name voor in het Logisch en Technische/implementatie niveau. Volgens naamgeving NEN3610: 
 	- Enumeraties: intern beheerd
-	- CodelijstenL extern beheerd
+	- Codelijsten: extern beheerd
