--- a/sessies/collecties-en-waardelijsten/verslagen/20241025-verslag.md
+++ b/sessies/collecties-en-waardelijsten/verslagen/20241025-verslag.md
@@ -1,4 +1,5 @@
-*Aanwezig*: Arjen Santema en ik
+*Aanwezig*: Arjen Santema en Kees Trautwein
+
 Er is blijkbaar iets fout gegaan met het vergaderverzoek naar Nicole en Fred. Ook de herinnering van begin deze week is niet aangekomen.
 
 Kees en Arjen hebben toch een aantal zaken besproken.
