--- a/sessies/collecties-en-waardelijsten/agendas/20241119-agenda.md
+++ b/sessies/collecties-en-waardelijsten/agendas/20241119-agenda.md
@@ -1,15 +1,13 @@
 Agenda voor bijeenkomst werkgoepje Collecties en Waardelijsten
 
-# Agenda:
-
-# Taken:
+## Taken:
 - Arjen heeft stukje voorbereid dat als basis kan dienen voor wat dit werkgroepje oplevert. Er in opgenomen zijn:
   - Verschillen tussen begrippenkaders en collecties.
   - Verschillen tussen verschillende soorten lijsten en hun toepassing
   - Welke zaken willen we als NL-SBB benoemen om het gebruik van deze lijsten in zo goed mogelijke banen te leiden?
 - Overige leden groep lezen dit stuk door. (zie notulen vorige keer voor achtergrond informatie)
   
-
+## Agenda
 1.	Bespreken verslag van vorige keer. Alle verslagen zijn te vinden op sessies/collecties-en-waardelijsten/verslagen 
 2.	Arjen heeft stukje voorbereid. Bespreken inhoud stuk. Bespreken vervolgstappen met dit stuk 
 3.	Moet dit groepje iets met https://github.com/pldn/nederlands-profiel-voor-stelselcatalogi/issues/57?
