--- a/sessies/collecties-en-waardelijsten/verslagen/20241127 verslag.md
+++ b/sessies/collecties-en-waardelijsten/verslagen/20241127 verslag.md
@@ -2,17 +2,19 @@
 *Aanwezig: Arjen, Nicole, Fred en Kees Trautwein*
 
 Arjen heeft het document [lijsten met waarden en begrippen](sessies/collecties-en-waardelijsten/lijsten met waardes of begrippen.md) uitgebreid met overzicht over verschillende soorten lijsten.
-De overige leden gaan deze tekst uitbreiden dan wel aanpassen. Nocoel en Fred introduceren de verzamelterm "verzamelingen" waaronder zaken als begrippenkaders, collecties en waardelijsten vallen.
+De overige leden gaan deze tekst uitbreiden dan wel aanpassen. Nicole en Fred introduceren de verzamelterm "verzamelingen" waaronder zaken als begrippenkaders, collecties en waardelijsten vallen. Mogelijk komt deze term terug in onze definitieve tekst.
 
 We hebben het (nogmaals) gehad over wat we verstaan onder begrippen. In de tekst van de standaard en ons document wordt er van uitgegaan dat begrippen in het hoofd van mensen zitten. NL-SBB standaardiseert hoe we dezee begrippen kunnen beschrijven. 
 Een begrip is een abstract concept. Dat betekent dat skos-conceptschemes met skos-concepts die andere dingen bevatten dan dit soort begrippen, technsch hetzelfde zijn, maar inhoudelijk mogelijk niet onder NL-SBB vallen.
 
-Verder verzoekt Kees om een duidelijke beschrijving wanneer een collectie wordt samengesteld van een verzamelign begrippen ipv een begrippenkader. Gevoel is dat een begrippenkader meer geschikt is als beheerde eenheid, maar volgens het werkgrpepje beheer kunnen beheereenheden op allereli manieren samengesteld worden, beheereenheid biedt dan weinig houvast. 
-Een ander verschil is dat een collectie "vluchtiger" lijkt, wat meer een senlle oplossing dan een begrippenkader. Bij een begrippenkader is meer denkwerk nodig voor het kader zelf, collectie zijn makkelijker saemn te stellen.
+Verder verzoekt Kees om een duidelijke beschrijving wanneer gekozen wordt voor een collectie ipv een begrippenkader om een verzameling begrippen te maken. Gevoel is dat een begrippenkader meer geschikt is als beheerde eenheid, maar volgens het werkgrpepje beheer kunnen beheereenheden op allerlei manieren samengesteld worden. Beheereenheid is dan geen correcte manier om begrippenkaders te ondertscheiden van collecties.
+Een ander verschil is dat een collectie "vluchtiger" lijkt, wat meer een snelle oplossing dan een begrippenkader. Bij een begrippenkader is meer denkwerk nodig voor het kader zelf, collecties zijn makkelijker samen te stellen. Voor Kees is bovenstaande nog niet voldoende concreet.
 
-Als we begrippenlijsten willen gebruiken als lijsten met waardes wordt e.e.a. wat lastiger. Voorbeelden hioervan zijn:
+Een ander punt is het gebruik van begrippenlijsten als lijsten met waardes. Voorbeelden hioervan zijn:
 - Een begrip dat de verboden klinkers voor nummerborden beschrijft
 - Een collectie met alle publiekrechtelijke beperkingen die van toepassing zijn in een bepaald domein.
+
+Het punt zou gemaakt kunnen worden dat dit geen begrippenkaders in de geest van SBB zijn hoewel zo'n lijst wel syntactische aan de SBB standaard zou kunnen voldoen.
 
 # Afspraken voor volgende keer
 - Onze tekst is verder uitgewerkt richting een definitieve versie. Eventuele discussies over de aanpassingen kunnen we dan voeren.
