--- a/sessies/collecties-en-waardelijsten/verslagen/20241127 verslag.md
+++ b/sessies/collecties-en-waardelijsten/verslagen/20241127 verslag.md
@@ -2,7 +2,7 @@
 *Aanwezig: Arjen, Nicole, Fred en Kees Trautwein*
 
 Arjen heeft het document [lijsten met waarden en begrippen](sessies/collecties-en-waardelijsten/lijsten met waardes of begrippen.md) uitgebreid met overzicht over verschillende soorten lijsten.
-De overige leden gaan deze tekst uitbreiden dan wel aanpassen. Nicole en Fred introduceren de verzamelterm "verzamelingen" waaronder zaken als begrippenkaders, collecties en waardelijsten vallen. Mogelijk komt deze term terug in onze definitieve tekst.
+De overige leden gaan deze tekst uitbreiden dan wel aanpassen. Nicole en Fred introduceren de verzamelterm "verzamelingen" waaronder zaken als begrippenkaders, collecties en waardelijsten vallen. Mogelijk komt deze term terug in onze definitieve tekst. Dat geldt ook voor de punten die hieronder genoemd worden.
 
 We hebben het (nogmaals) gehad over wat we verstaan onder begrippen. In de tekst van de standaard en ons document wordt er van uitgegaan dat begrippen in het hoofd van mensen zitten. NL-SBB standaardiseert hoe we dezee begrippen kunnen beschrijven. 
 Een begrip is een abstract concept. Dat betekent dat skos-conceptschemes met skos-concepts die andere dingen bevatten dan dit soort begrippen, technsch hetzelfde zijn, maar inhoudelijk mogelijk niet onder NL-SBB vallen.
