--- a/sessies/agenda/20250227 agenda.md
+++ b/sessies/agenda/20250227 agenda.md
@@ -1,5 +1,6 @@
 1. Mededelingen
-   - ...
+   - NL-SBB community
+   - Update over traject Forum
 2. Verslag en actiepunten vorige keer
    - Actie Linda: Respec meldingen specificaties oplossen
    - Actie Frank: Update van de readme
@@ -10,6 +11,8 @@
 3. Besluit [voorstel meta-informatie](https://github.com/Geonovum/NL-SBB/blob/main/sessies/metadata/voorstel%20meta-informatie.md)
 4. Waardelijsten subwerkgroep
 5. Openstaande issues
+    - [Issue #48](https://github.com/Geonovum/NL-SBB/issues/48) Toevoegen optie voor "externe" begrippen in applicatieprofiel
+    - [Issue #47](https://github.com/Geonovum/NL-SBB/issues/47) Meerdere sh:message triples lijken niet toegestaan
     - [Issue #40](https://github.com/Geonovum/NL-SBB/issues/40) "Extern begrip" heeft geen definitie in NL-SBB
     - [Issue #36](https://github.com/Geonovum/NL-SBB/issues/36) Zoektermen
 6.. W.v.v.t.k.
