--- a/sessies/verslagen/20250227 verslag.md
+++ b/sessies/verslagen/20250227 verslag.md
@@ -1,10 +1,10 @@
-aanwezig: Jesse, Pano, Frans, Kees, Hans, Marco, Jos, Gerald, .. , .. , ..
+aanwezig: Jesse Bakker, Pano Maria, Frans van der Zande, Kees Trautwijn, Hans Overbeek, Marco Brattinga, Jos van der Arend, Gerald Groot-Roessink, Martijn Wisse, Nicole Groot Nibbelink, Fred Termaat, Niels Hoffmann
 
-afmeldingen: Frank, Linda Tanja, Arjen
+afmeldingen: Frank, Linda, Tanja, Arjen
 
 1. __Mededelingen__
 - 1e communitymeeting 25-2-205. goed gegaan. 3 presentaties.
-Er is een community website: 
+Er is een community website: https://www.nl-sbb-community.nl/index.php/Hoofdpagina
 - stavaza Forum standaardisatie
     - feedback zodanig (kvk, prorail) dat er nog een stap gezet moet worden (editorial) voordat er positief advies komt. Forum in de lead voor volgende actie.
 
@@ -37,10 +37,10 @@ Hans/Niels: applicableLegislation - semantiek niet vergelijkbaar.
     -> issue aanmaken voor het oplossen van het gebruik van deze eigenschap
 
 Hans: Naam 1..n => moet zijn 1 per taal 
-Danny: waarom een label (gelijk aan titel) -> LD best practice
+Martijn: waarom een label (gelijk aan titel) -> LD best practice
 Kees: misschien ook opnemen bij DCAT-AP-NL omdat het een LD best practice is.
 
-Hans: wat is het verschil tussen dcat:previousversion en dct:replaces. 
+Hans: wat is het verschil tussen dcat:previousVersion en dct:replaces. 
     Antw: replaces is echt vervangt. previousversion kan duiden op een nieuwe (concept) versie, die de oude nog niet vervangt.
     -> extra duiding opnemen zoals beschreven in de best practice
 
@@ -48,10 +48,13 @@ Niels: Hoe erg is het dat er aanvullende eigenschappen zijn gedefinieerd?
     Hindert dat bredere adoptie?
 Antw: nee als werkgroep vinden we dat geen probleem
 
-Jesse: volgende stappen => als werkgroep werken we de vragen uit en in volgende bijeenkomst als pull request goed keuren.
+Jesse: volgende stappen => als werkgroep werken we de vragen uit en voor de volgende bijeenkomst. Wijzigingen zullen via een PR naar de werkversie gebracht worden. Daar kunnen de wijzigingen gevalideerd worden.
+- applicable legislation - hoewel het huidige voorstel conform de definitie van de eigenschap is; is het niet conform het gebruik in DCAT-AP. Dit moeten we oplossen.
+- naam - specificatie van naam aanpassen zodat we afspreken dat er één rdfs:label per taal wordt vastgelegd - voor zover relevant. Wel nog kijken welke plek een 'LD-best practice' in NL-SBB hoort te hebben.
+- Het hernoemen van de tweede kolom in het voorstel (editoriaal)
 
 Kees: Pull request wordt dan gebruikt als redactionele stap?
-antw: omdat we op hoofdlijnen nu akkoord zijn willen we ivm de snelheid deze wijziging al richting de werkversie doorzetten.
+antw: omdat we op hoofdlijnen nu akkoord zijn willen we ivm de snelheid deze laatste wijzigingen offline behandelen. Indien nodig wordt dit de volgende bijeenkomst geagendeerd. 
 
 4. __Waardelijsten subwerkgroep__
 
@@ -88,7 +91,7 @@ Een eigenschap heeft een waarde. Die relatie expliciet maken is waardevol.
 
 Pano: het hangt erg van je 'gegevenstheorie' achtergrond af hoe je een en ander gebruikt. MIM 2.0 probeeert de vraag te beantwoorden: hoe kun je een waarde aan een begrip koppelen.
 
-conclusie: technisch gezien is er ruimte om waardelijsten te maken met NL-SBB en/of SKOS. Maar waardelijsten passen niet per se in een NL-SBB begrippenkader. In sommige gevallen is het prima om het op een ander MIM niveau vast te leggen.
+conclusie: technisch gezien is er ruimte om waardelijsten te maken met NL-SBB en/of SKOS. Maar waardelijsten passen niet altijd in een NL-SBB begrippenkader. In sommige gevallen is het prima om het op een ander MIM niveau vast te leggen.
 
 Wens om in MIM expliciet te maken hoe het zit met de verhouding tussen waardelijsten en begrippen. 
 
@@ -100,9 +103,9 @@ actie voor de werkgroep: best practice voor het beschrijven van waardelijsten en
 - could have: toelichting: zoekterm is een expliciet gedefinieerde zoekterm, als alias (verborgen label). de vraagsteller lijkt te concluderen dat alleen zoektermen gebruikt zouden kunnen worden om te zoeken, maar met AI is de hele content te indexeren.
 
 [Issue #40](https://github.com/Geonovum/NL-SBB/issues/40) "Extern begrip" heeft geen definitie in NL-SBB
-- Jesse: voorkeur om link te verwijderen
+- Jesse: We kunnen de link verwijderen maar de tekst behouden.
 
-    Marco: voorkeur om wel extern begrip te definieren
+    Marco: voorkeur om wel extern begrip te definieren omdat we hier hele concrete scenario's mee moeten uitleggen
     - [#48](https://github.com/Geonovum/NL-SBB/issues/48) casus om te kunnen verwijzen naar een begrip in een extern begrippenkader, waar het nog niet rechtstreeks verwijsbaar is. 
     In het profiel zou een extern begrip GEEN definitie mogen hebben.
 
