--- a/sessies/verslagen/20250403verslag.md
+++ b/sessies/verslagen/20250403verslag.md
@@ -11,7 +11,7 @@ Zie [Wiki](https://www.nl-sbb-community.nl/index.php/Hoofdpagina) voor toelichti
 
 * onderzoek mbt implementatie ervaring
 
-toelichtingen verbeteren (o.a. met input van toelichtingen belastingdienst), tools van Logius ter beschikking stellen, met name excels. zie ook presentatie 
+toelichtingen verbeteren (o.a. met input van toelichtingen belastingdienst), tools van Logius ter beschikking stellen, met name excels. zie ook [presentatie](https://github.com/Geonovum/NL-SBB/raw/refs/heads/main/sessies/presentaties/Implementatie%20ervaringen.pptx) 
 
 * Wat staat er nog op de planning
 
@@ -27,9 +27,9 @@ wat komt daarna
 ideeën en input welkom
 Jaarplan 2025 in de maak
 
-** organiseren reactie forum vragen
+* organiseren reactie forum vragen
 
-** duidelijkheid met betrekking tot de roadmap van NL-SBB - input is welkom
+* duidelijkheid met betrekking tot de roadmap van NL-SBB - input is welkom
 
 # Verslag en actiepunten vorige keer
 
