--- a/sessies/verslagen/20250619 verslag.md
+++ b/sessies/verslagen/20250619 verslag.md
@@ -1,14 +1,13 @@
 
-# Verslag werkgroep ‘’Nederlands Model Stelselcatalogus’ 19 juni 2025
+# Verslag werkgroep NL-SBB 19 juni 2025
 
 *Aanwezig:* Frank Terpstra, Tanja Rhonzina, Jesse Bakker, Jos van der Arend, Marco Brattinga, Annemieke Vliegen, Hans Overbeek, Martijn Wisse 
 
-*Afwezig*: Pano Maria heeft zich afgemeld. 
+*Afwezig*: Pano Maria, Kees Trautwein, Frans van der Zande, Arjen Santema
 
-##Mededelingen
+## Mededelingen
 
 - Update van de forum procedure: Jesse geeft aan de hand van een korte presentatie een toelichting op de procedure en de tweede expertsessie. Vraag Annemieke, zijn de adviezen voorwaardelijk voor opname of suggesties voor de volgende versie? Antwoord is dat laatste. Vraag Hans over functioneel toepassingsgebied: Begrippenlijsten in wetten vallen er nu niet onder. Antwoord strict genomen gat wetgeving altijd boven de PTOLU lijst en gaat de lijst alleen over aanbestedingen van systemen. Daarmee zal een functioneel toepassingsgebied nooit direct leiden tot verplichting NL-SBB in wetgeving. Verleiding van wetgevingsjuristen om het toe te passen omdat het hen voordelen biedt is natuurlijk altijd een optie.
-
 
 ## Verslag vorige keer
 Verslag goedgekeurd
@@ -17,7 +16,7 @@ Verslag goedgekeurd
 - Issue 47 gesloten	
 - issue 48 jesse reviewed
 - Jesse contact zoeken met ProRail (actiepunt uit vorige overleg) loopt (contact gezocht)
-- Frank neemt de input van de werkgroep mee in de offerte voor de beheeropdracht (gedaan offerte ingediend
+- Frank neemt de input van de werkgroep mee in de offerte voor de beheeropdracht (gedaan offerte ingediend)
 - Frank nodigt Gideon Zegwaart uit voor het volgende overleg (gedaan, wel laat)
 
 ## Open Issues
