--- a/sessies/verslagen/20250619 verslag.md
+++ b/sessies/verslagen/20250619 verslag.md
@@ -20,10 +20,10 @@ Verslag goedgekeurd
 - Frank nodigt Gideon Zegwaart uit voor het volgende overleg (gedaan, wel laat)
 
 ## Open Issues
-issue 50 Het begrip domein is niet goed gedefinieerd: Issue wordt Herkend door Hans. wordt meegenomen in versie 1.1
-Issue 51 Suggestie over toelichting begrippenkader, mee te nemen in redactionele slag 1.0.1
-Issue 52 bugfix met pull request, wordt gemerged.
-Issue 53 OWL import statements, pull request zorgt ervoor dat inladen NL-SBB ook SKOS-core en SKOS-Thes worden ingeladen. We mergen pull request.
+- Issue 50 Het begrip domein is niet goed gedefinieerd: Issue wordt Herkend door Hans. wordt meegenomen in versie 1.1
+- Issue 51 Suggestie over toelichting begrippenkader, mee te nemen in redactionele slag 1.0.1
+- Issue 52 bugfix met pull request, wordt gemerged.
+- Issue 53 OWL import statements, pull request zorgt ervoor dat inladen NL-SBB ook SKOS-core en SKOS-Thes worden ingeladen. We mergen pull request.
 
 ## Rondvraag
 Frank, vraag aan eenieder om na te denken over presentaties op evenement met MIM community. Neem contact op met Frank/Tanja als je iets wil presenteren.
