--- a/sessies/verslagen/20251002 verslag.md
+++ b/sessies/verslagen/20251002 verslag.md
@@ -1,1 +1,38 @@
+# Verslag werkgroep NL-SBB 2 oktober 2025
+
+Frank Terpstra, Tanja Rhonzina, Jesse Bakker, Jos van der Arend, Marco Brattinga, Hans Overbeek, Pano Maria,  Frans van der Zande,
+Kees Trautwein, Arjen Santema, Annemieke Vliegen, Martijn Wisse
+
+*Aanwezig:* 
+
+*Afwezig*:  
+
+## Mededelingen
+- PGDI
+- Publicatiewijze NL-SBB
+## Verslag vorige keer
+
+
+## Actiepunten
+
+
+## Resultaat opgepakte issues
+
+## NL-SBB in de beslisboom Open Standaarden
+
+
+## Excel template begrippenbeheer
+
+
+## Markconsultatie begrippenbeheer Provincies (IPO)
+
+## Praktijkhandleiding NL-SBB (Limburg)
+
+## Oppakken isses 1.2
+
+
+## Openstaande issues
+
+
+## w.v.t.t.k.
 
