--- a/sessies/verslagen/20251002 verslag.md
+++ b/sessies/verslagen/20251002 verslag.md
@@ -1,38 +1,70 @@
-# Verslag werkgroep NL-SBB 2 oktober 2025
+# Verslag werkgroep NL-SBB 2 oktober 2025 (nog in concept)
 
-Frank Terpstra, Tanja Rhonzina, Jesse Bakker, Jos van der Arend, Marco Brattinga, Hans Overbeek, Pano Maria,  Frans van der Zande,
-Kees Trautwein, Arjen Santema, Annemieke Vliegen, Martijn Wisse
 
-*Aanwezig:* 
+*Aanwezig:* Jesse Bakker, Mehmet Duran (IPO), Machtelt Kusters (Prov Limburg), Frans van der Zande (Logius), Pano Maria (Skemu), Jos van der Arend (Kennisnet), Marco Brattinga (Sopra Steria), Kees Trautwein (Logius), Martijn Wisse (Justitie en Veiligheid), Annemieke Vliegen (Belastingdienst), Tanja Rhonzina (Geonovum), Paul Janssen (Geonovum)
 
-*Afwezig*:  
+*Afwezig*: Hans Overbeek, Arjen Santema, Frank Terpstra
 
 ## Mededelingen
-- PGDI
-- Publicatiewijze NL-SBB
-## Verslag vorige keer
+- PGDI: Geen nieuws, komen we volgende keer op terug.
+- Publicatiewijze NL-SBB: Geonovum heeft een nieuwe publicatiewijze. Ondermeer is er vanaf nu maar één respec publicatie per repository. Dat betekent dat NL-SBB in twee repositories moet gaan werken.
 
+## Verslag vorige keer
+Vraag: Wat is de status van goedkeuring NL-SBB voor Forum standaardisatie? Het is goed gekeurd maar moet nog op de lijst geplaatst worden. De 1.0 versie staat bij Geonovm, maar heeft geen versie aanduiding. Er is een behoefte om een versienummers toe te voegen. Wordt als issue opgevoert.
+
+Verslag is goedgekeurd.
 
 ## Actiepunten
-
+niets genoteerd.
 
 ## Resultaat opgepakte issues
+niets genoteerd.
 
 ## NL-SBB in de beslisboom Open Standaarden
 
+Is er een 1 op 1 koppeling met SKOS? NL-SBB use case is breder dan SKOS omdat NL-SBB niet per definitie in SKOS publiceert omdat organisaties ook intern begrippenkaders publiceren. Als je op het web publiceert moet het wel aan SKOS voldoen. Er is een uitgebreidere discussie hoe je dit beter in de beslisboom kan formuleren.
+
+Actie: Er wordt gekeken hoe tekst aangepast kan worden, resultaat wordt voorgelegd aan werkgroep.
 
 ## Excel template begrippenbeheer
+
+Wordt als product ontwikkeld om laagdrempelig met NL-SBB te kunnen werken.
+Excel is niet voor uitwisseling maar een interface voor invulling en beheer. Er moet dan ook een Excel naar RDF (NL-SBB RDF) transformatie beschikbaar zijn. Daar is een opensource tool voor beschikbaar.
+Excel kan in de regel wel voor relatief eenvoudige begrippenkaders maar niet als er relaties tussen begrippen opgevoerd worden.
+
+Er zijn een aantal voorbeelden gedeeld:
+- belastingdienst: Mooi voorbeeld. Verschillende tabbladen als template voor opstellen vocabulaire. Er is een mapping naar RDF beschreven, die kan je ook gebruiken als (technische) invulinstructie.
+- Marco Brattinga geeft een ander voorbeeld: Dit is gebaseerd het template van de belastingdienst. Er zijn een aantal verschillen: Specifiek tabblad voor begrippen en termen. Er is ook functionaliteit voor relaties tussen begrippen, al wordt het gebruik hiervan afgeraden.
+
+Van belang is dat werken met Excel geen doel is maar een tijdelijk middel daar waar het nodig is. De stip op de horizon is specifieke begrippen beheertooling
+
+Actie: Maken van een algemene NL-SBB excel template. Tanja, Martijn, Jos, Jesse, Mehmet gaat intern informeren bij projectteam. Annemiek en Marco kijken mee.
 
 
 ## Markconsultatie begrippenbeheer Provincies (IPO)
 
+Behoefte voor een interprovinciaal gegevenswoordenboek is er. Dit moet conform NL-SBB zijn.
+- proces:
+opdeling in verschillende domeinen.
+Programma van eisen is opgesteld o.a. het hielp door in die fase gebruik te maken van ArchiXL.
+
+Marktverkenning voor tooling is uitgezet. Moet beheer en publicatie kunnen verzorgen.
+
+Er wordt nu de term gegevenswoordenboek gebruikt in plaats van een mogelijk betere term begrippenkader. Er si voor eerste term gekozen omdat die makkelijker ui te dragen is. Men is zich bewust dat het over begrippen gaat en niet over gegevens.
+
+
 ## Praktijkhandleiding NL-SBB (Limburg)
 
-## Oppakken isses 1.2
+Er is veel onbekendheid met het Nederlands ecosysteem van standaarden, begrippen en gegevens. Een onderwerp daarin is ook het gebruik van eenvoudig te begrijpen terminologie. De praktijkrichtlijn wil daar wat aan doen.
 
+Er wordt opgemerkt dat het praten over begrippen (standaarden) en wat het belang is zeker in begrijpelijke taal moet gebeuren. Het ontwikkelen van begrippenkaders daar in tegen is wel een vakgebied dat kennis vereist.
+
+## Oppakken issues 1.2
+niet besproken
 
 ## Openstaande issues
-
+niet besproken
 
 ## w.v.t.t.k.
 
+Volgende vergadering 13 november, 15.00 - 17.00.
