--- a/sessies/verslagen/20251002 verslag.md
+++ b/sessies/verslagen/20251002 verslag.md
@@ -34,7 +34,7 @@ Excel kan in de regel wel voor relatief eenvoudige begrippenkaders maar niet als
 
 Er zijn een aantal voorbeelden gedeeld:
 - belastingdienst: Mooi voorbeeld. Verschillende tabbladen als template voor opstellen vocabulaire. Er is een mapping naar RDF beschreven, die kan je ook gebruiken als (technische) invulinstructie.
-- Marco Brattinga geeft een ander voorbeeld: Dit is gebaseerd het template van de belastingdienst. Er zijn een aantal verschillen: Specifiek tabblad voor begrippen en termen. Er is ook functionaliteit voor relaties tussen begrippen, al wordt het gebruik hiervan afgeraden.
+- Min J&V(Marco) geeft een ander voorbeeld: Dit is gebaseerd het template van de belastingdienst. Er zijn een aantal verschillen: Specifiek tabblad voor begrippen en termen. Er is ook functionaliteit voor relaties tussen begrippen, al wordt het gebruik hiervan afgeraden.
 
 Van belang is dat werken met Excel geen doel is maar een tijdelijk middel daar waar het nodig is. De stip op de horizon is specifieke begrippen beheertooling
 
