--- a/sessies/verslagen/20251113 verslag.md
+++ b/sessies/verslagen/20251113 verslag.md
@@ -8,13 +8,13 @@
 
 *update OGC werkgroep*
 OGC heeft oproep gedaan of er interesse is een vocabulary service werkgroep op te richten. Wordt momenteel geschreven aan Charter(oprichtingsdocument met scope activiteiten, relaties met ander werk ) dat is eerste stap voor oprichting. Heet nu Terminology werkgroep, zal iets bredere scope krijgen.
-Link naar github OGC https://github.com/opengeospatial/geosemantics-dwg/blob/master/terminology_swg_charter/swg_charter.pdf
-Mogelijk kan Geonovum deelnemen en ervaring NL-SBB inbrengen, alsook internationale ervaring ophalen. Wel enigszins curieus dat OGC een niet geo onderwerp oppakt.
+[Link naar github OGC] (https://github.com/opengeospatial/geosemantics-dwg/blob/master/terminology_swg_charter/swg_charter.pdf)
+Geonovum gaat deelnemen en ervaring NL-SBB inbrengen (de werkgroep wil bijdragen), alsook internationale ervaring ophalen. Wel enigszins curieus dat OGC een niet geo onderwerp oppakt.
 
 
 ## Verslag vorige keer
 
-Paar kleine redactionele aanpassingen daarmee goedgekeurd. Aangepaste verslag staat hier: https://github.com/Geonovum/NL-SBB/blob/main/sessies/verslagen/20251002%20verslag.md
+Paar kleine redactionele aanpassingen daarmee goedgekeurd. Aangepaste verslag [staat hier](https://github.com/Geonovum/NL-SBB/blob/main/sessies/verslagen/20251002%20verslag.md)
 
 
 ## Actiepunten
@@ -28,9 +28,9 @@ Releaseplan is gepresenteerd aan GDI tafel gegevensuitwisseling. Er zijn nu twee
 
 ## Nieuwe issues
 
-https://github.com/Geonovum/NL-SBB/issues/77  (machine leesbare/door reasoners leesbare) Verwijzingen, komt een klein werkgroepje met Kees, Hans, Annemieke, Jesse om in detail naar dit probleem te kijken.
-https://github.com/Geonovum/NL-SBB/issues/76 (gebruik van eigen standaard voor definiëren eigen standaard) wordt in de aankomende redactionele beter toegelicht.
-https://github.com/Geonovum/NL-SBB/issues/75 (schema’s voor code(lijsten)) nemen we mee als onderwerp voor de volgende inhoudelijke release. Dit is een uitbreiding in functionaliteit.
+[issue 77](https://github.com/Geonovum/NL-SBB/issues/77)  (machine leesbare/door reasoners leesbare) Verwijzingen, komt een klein werkgroepje met Kees, Hans, Annemieke, Jesse om in detail naar dit probleem te kijken.
+[issue 76](https://github.com/Geonovum/NL-SBB/issues/76) (gebruik van eigen standaard voor definiëren eigen standaard) wordt in de aankomende redactionele beter toegelicht.
+[issue 75](https://github.com/Geonovum/NL-SBB/issues/75) (schema’s voor code(lijsten)) nemen we mee als onderwerp voor de volgende inhoudelijke release. Dit is een uitbreiding in functionaliteit.
 
 ## Oppakken issues 1.2
 
@@ -38,4 +38,5 @@ Voorgestelde wijzigingen zijn uitbreidingen en inhoudelijk gezien geen breaking 
 
 ## w.v.t.t.k.
 
+Wanneer kan [issue 70](https://github.com/Geonovum/NL-SBB/issues/70) opgepakt worden? Eerst nog een check op openstaande branches die mogelijk gemerged moeten worden, daarna splitsen. Actiepunt Linda. 
 Volgende vergadering 15 januari 2026, 15.00 - 17.00.
