--- a/sessies/verslagen/20260115 verslag.md
+++ b/sessies/verslagen/20260115 verslag.md
@@ -1,6 +1,6 @@
 # Verslag werkgroep NL-SBB 15 januari 2025 
 
-*Aanwezig:* Frank Terpstra(Geonovum), Jos van der Arend (Kennisnet), Marco Brattinga (Sopra Steria), Kees Trautwein (Logius), Martijn Wisse (Justitie en Veiligheid), Annemieke Vliegen (Belastingdienst), Tanja Rhonzina (Geonovum), Frans van der Zande (Logius), Pano Maria (Skemu), Brian Dommisse (Kennisnet)
+*Aanwezig:* Frank Terpstra(Geonovum), Jos van der Arend (Kennisnet), Marco Brattinga (Sopra Steria), Kees Trautwein (Logius), Martijn Wisse (Justitie en Veiligheid), Annemieke Vliegen (Belastingdienst), Tanja Rhonzina (Geonovum), Frans van der Zande (Logius), Pano Maria (Skemu), Brian Dommisse (Kennisnet), Jan Willem van Veen (ArchiXL)
 
 *Afwezig*: Linda van den Brink(Geonovum), Jesse Bakker(Kadaster), Arjen Santema(Kadaster), Hans Overbeek(KOOP), Mehmet Duran (IPO),
 
